--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -4,7 +4,7 @@
 </div>
 <div class="row">
     <div class="col s2"></div>
-    <form action="/comment/{{article._id}}" method="POST" class="card-panel col s8">
+    <form action="/Note/{{article._id}}" method="POST" class="card-panel col s8">
     <h5>Post A Comment</h5>
     <div class="row">
         <div class="input-field">
@@ -13,12 +13,12 @@
         </div>
         <div class="input-field">
             <i class="material-icons prefix">comment</i>
-            <input id="icon_telephone" type="text" placeholder="Comment" name="comment" class="validate active">
+            <input id="icon_telephone" type="text" placeholder="Note" name="Note" class="validate active">
         </div>
         </div>
         <div class="row">
             <div class="input-field">
-                <center><input class="btn add-comment-button topnav" type="submit" value="Submit"></center>
+                <center><input class="btn add-Note-button topnav" type="submit" value="Submit"></center>
             </div>
         </div>
     </form>
@@ -29,8 +29,8 @@
     </div>
     <div class="col s8">
         <h5>Comments:</h5>
-        {{#if article.comment}}
-        {{#each article.comment}}
+        {{#if article.Note}}
+        {{#each article.Note}}
         <div class="card">
             <p id="nameComment">{{name}}</p>
             <p>{{body}}</p>
